--- a/src/SidebarChat.css
+++ b/src/SidebarChat.css
@@ -21,6 +21,7 @@
     margin-bottom: 5px;
 }
 .sidebarChat__info > p{
-    font-size: 15px;
+    font-size: 14px;
     margin-bottom: 6px;
+    color: rgb(163, 163, 163);
 }
