--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .app{
     display: grid;
     place-items: center;
@@ -13,4 +12,10 @@
     width: 97vw;
     background-color:#1d2d38;
     box-shadow: -1px 4px 20px -6px rgba(160, 3, 3, 0.75);
+}
+.loading{
+    color: white;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
